Remove unnecessary commons-collections usage